Changed names and description of the site

--- a/config/env.yml
+++ b/config/env.yml
@@ -1,6 +1,6 @@
 defaults: &defaults
   ENV_YAML: true
-  title: "Philippine Ruby Users Group"
+  title: "Nairuby Ruby Users Group"
 
 development:
   <<: *defaults
